--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -17,3 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
 pacman::p_load("tidyverse","ggplot2","dplyr","png")
 ```
 
+Possible Questions:
+1.Does the use of potentially human toxic chemicals vary between states?
+2.Does the use of potentially bee toxic chemicals vary between states?
+3.How price changes by years and states?
