--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -21,3 +21,25 @@ Possible Questions:
 1.Does the use of potentially human toxic chemicals vary between states?
 2.Does the use of potentially bee toxic chemicals vary between states?
 3.How Pesticide dosage changes by years and states?
+
+```{r}
+table(strawberry$Year)
+```
+
+```{r}
+# remove missing values in carcinogen
+strawberry_car <- subset(strawberry, carcinogen != "")
+```
+
+```{r}
+table(strawberry_car$Year)
+```
+```{r}
+table(strawberry_car$chemical)
+table(strawberry_car$chemical_Type)
+
+strawberry_car_insec <- subset(strawberry_car, toxicity_bee != "")
+
+table(strawberry_car_insec$chemical_Type)
+```
+
