--- a/strawberry_pdf.Rmd
+++ b/strawberry_pdf.Rmd
@@ -10,18 +10,228 @@ and maps. Make sure to include citations.
 
 ```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-pacman::p_load("tidyverse","ggplot2","dplyr")
+pacman::p_load("tidyverse","knitr","kableExtra","ggplot2", "ggbiplot")
+options(warn = -1)
 ```
-
-Possible Questions:
-1.Does the use of potentially human toxic chemicals vary between states?
-2.Does the use of potentially bee toxic chemicals vary between states?
-3.How Pesticide dosage changes by years and states? (Shiny one) 
-
-show a map of three states' situations (different color represents different toxicity levels)
 
 ```{r}
 source("wrangling.R", echo=TRUE)
 ```
+
+# 1. Introduction
+
+In this project, we use the data sets strawberries, insecticides, and herbicides-fungicides-other from USDA. We first wrangle these files, finish data cleaning and organizing the final data set; then we start to visualize and explore the data. This report focus on 2 main parts: Data cleaning and EDA.
+
+- Data cleaning: We wrangle the data sets strawberries, insecticides, and herbicides-fungicides-other. Separate some columns and eliminate the redundancy.
+- EDA: We plot ...
+
+Besides, we deploy a shiny app [Shiny_strawberries](https://rongli.shinyapps.io/shiny/) for data display and exploration.
+
+# 2. Data cleaning
+In this part, we wrangle and finish data cleaning that we will conduct EDA later.
+
+## 2.1 Import data sets strawberries and pesticides
+
+```{r}
+pesticides <- read.csv("Pesticides.csv", header = TRUE, fileEncoding = "latin1")
+strawb <- read.csv("Strawberries.csv", header = TRUE, fileEncoding = "latin1")
+```
+
+## 2.2 Separate the column 'Domain' into 2 columns "dname", "type".
+
+```{r}
+strawb <- strawb %>%  separate(col=Domain,
+                               into = c("dname", "type" ), 
+                               sep = ",", 
+                               fill = "right")
+```
+
+## 2.3 Make a copy of Domain.Category
+
+```{r}
+strawb %<>% 
+  mutate(Chemicals = Domain.Category) %>% 
+  relocate(Chemicals, .after = Domain.Category) 
+```
+
+## 2.4 Set Value Column to Numeric
+
+```{r}
+strawb$Value <- as.numeric(strawb$Value)
+```
+
+## 2.5 Create list of chemicals.
+
+```{r}
+strawb %<>% separate(col = Chemicals,
+                     into = c("title", "details"),
+                     sep = ":",
+                     fill = "right")
+
+strawb %<>% mutate(details = str_extract(str_trim(details) ,"[^(].*[^)]") )
+```
+
+## 2.6 Select only chemical columns.
+
+```{r}
+strawb_chem <- strawb %>% filter((type=="FUNGICIDE")|
+                                   (type=="HERBICIDE")|
+                                   (type=="INSECTICIDE")|
+                                   (type== "FERTILIZER")|
+                                   (type== "OTHER"))
+```
+
+## 2.7 Drop no info columns.
+
+```{r}
+drop_no_info_cols <- function(df){
+  cnames = colnames(strawb)
+  T = NULL
+  for(i in 1:ncol(df)){T <- c(T, nrow(unique(df[i])))}
+  drop_cols <- cnames[which(T == 1)]
+  return(select(df, !all_of(drop_cols)))
+}
+
+strawb_chem <- drop_no_info_cols(strawb_chem)
+```
+
+## 2.8 Separate the name from the =Number.
+
+```{r}
+chemname <- str_split(strawb_chem$details, " =", simplify = TRUE)
+strawb_chem$chemical <- chemname[,1]
+```
+
+## 2.9 Format chemical names in the pesticide file.
+
+```{r}
+pesticides<- clean_names(pesticides)
+pesticides<- rename(pesticides, chemical = i_pesticide)
+pesticides <- mutate_all(pesticides, .funs=toupper)
+```
+
+## 2.10 Remove empty rows
+
+```{r}
+pesticides <- pesticides[!apply(pesticides == "", 1, all), ] 
+```
+
+## 2.11 Wrangle two data files.
+
+```{r}
+strawberry <- inner_join(strawb_chem, pesticides)
+strawberry <- select(strawberry, -c("Domain.Category", "title", "details"))
+```
+
+## 2.12 Separate the column 'Data.item' into 4 columns "Strawberries", "items", "discription", "units".
+
+```{r}
+strawberry %<>% separate(col = Data.Item, 
+                   into = c("Strawberries", "items", "discription", "units"),
+                   sep = ",",
+                   fill = "right")
+```
+
+```{r}
+distinct(strawberry, Strawberries)
+distinct(strawberry, items)
+distinct(strawberry, discription)
+distinct(strawberry, units)
+```
+
+```{r}
+strawberry
+strawberry %<>%drop_na(Value)
+```
+
+## 2.13 Change names of variable "type","Carcinogen","Bee.Toxins".
+
+```{r}
+colnames(strawberry)[colnames(strawberry) %in% 
+                       c("type")] <- c("chemical_type")
+colnames(strawberry)[colnames(strawberry) %in% 
+                       c("discription")] <- c("Measurement(s)")
+colnames(strawberry)[colnames(strawberry) %in% 
+                       c("bee_toxins")] <- c("toxicity_bee")
+```
+
+## 2.14 Use numerical values to represent the bee.toxin level and Carcinogen level.
+
+```{r}
+strawberry$toxicity_bee <- plyr::mapvalues(strawberry$toxicity_bee, 
+                                         from = c("SLIGHT","MODERATE","HIGH"), to = c(1,2,3))
+strawberry$toxicity_bee <- as.numeric(strawberry$toxicity_bee)
+```
+
+```{r}
+strawberry$carcinogen <- plyr::mapvalues(strawberry$carcinogen, 
+                                         from = c("POSSIBLE","PROBABLE","KNOWN"), to = c(1,2,3))
+strawberry$carcinogen <- as.numeric(strawberry$carcinogen)
+```
+
+## 2.15 Remove missing values in carcinogen and toxicity_bee.
+
+```{r}
+strawberry_car <- subset(strawberry, carcinogen != "")
+```
+
+```{r}
+strawberry_car_insec <- subset(strawberry_car, toxicity_bee != "")
+```
+
+# 3. EDA
+
+## 3.1 Subsets by different measurement
+
+```{r}
+table(strawberry$`Measurement(s)`)
+strawberry$`Measurement(s)` = str_trim(strawberry$`Measurement(s)`)
+df.lb = subset(strawberry, `Measurement(s)` == "MEASURED IN LB")
+df.app = subset(strawberry, `Measurement(s)` == "MEASURED IN LB / ACRE / APPLICATION")
+df.year = subset(strawberry, `Measurement(s)` == "MEASURED IN LB / ACRE / YEAR")
+df.num = subset(strawberry, `Measurement(s)` == "MEASURED IN NUMBER")
+df.PCT = subset(strawberry, `Measurement(s)` == "MEASURED IN PCT OF AREA BEARING")
+```
+
+## 3.2 Calculate proportions of strawberries by 'Measurements=Number'
+
+```{r}
+df.num<-tibble::as_tibble(df.num)
+#Count frequency/proportion for each state
+df.num %>%
+  group_by(State) %>%
+  summarise(n = n()) %>%
+  mutate(freq = n / sum(n))
+#I think we can show the proportions of each states on our map using mouse over.
+```
+
+## 3.3 Calculate proportions of values(numbers) grouped by 'toxicity_bee'
+
+```{r}
+df.value<-tibble::as_tibble(df.num$Value)
+df.toxicity_bee<-tibble::as_tibble(df.num$toxicity_bee)
+df.toxicity<-cbind(df.value,df.toxicity_bee)
+```
+
+```{r}
+#Rename column 2 into 'toxicity_bee'
+names(df.toxicity)[2]<- 'toxicity_bee'
+
+df.toxicity %>%
+  group_by(toxicity_bee) %>%
+  summarise(n = n()) %>%
+  mutate(freq = n / sum(n))
+```
+
+```{r}
+options(warn = oldw)
+```
+
+
+# 4. Reference
+
+
+
+
 
 
