--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -7,15 +7,18 @@ output:
     theme: solarized
     highlight: pygments
 ---
+<style type="text/css">
+p { text-align: left; }
+</style>
 
-```{r setup, include=FALSE, echo=FALSE, message=FALSE, warning=FALSE}
+```{r setup,echo=FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set( include=FALSE, echo=FALSE, message=FALSE, warning=FALSE)
 pacman::p_load("tidyverse","ggplot2","dplyr","png")
 source("wrangling.R")
 source("figure_functions.R")
 ```
 
-#Possible Questions:  
+# Possible Questions:  
 1.Does the use of potentially human toxic chemicals vary between states?  
 2.Does the use of potentially bee toxic chemicals vary between states?    
 3.How Pesticide dosage changes by years and states?    
@@ -28,4 +31,13 @@ map.straw(df.app, "Pesticide Usage(LB/ACRE/APPLICATION)\n2016 2018 2019")
 map.straw(df.year, "Pesticide Usage(LB/ACRE/YEAR)\n2016 2018 2019")
 map.straw(df.num,"Pesticide Usage(NUMBER)\n2016 2018 2019")
 map.straw(df.PCT, "Pesticide Usage(PCT OF AREA BEARING)\n2016 2018 2019") 
+```
+# Applications of Bee Toxins
+```{r, include = TRUE,warning=FALSE,results = FALSE}
+bee_tox()
+```
+
+
+```{r,results = FALSE}
+carc_apps()
 ```
