--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Presentation"
-author: "Group 3"
-date: "10/27/2021"
+title: "Strawberry Presentation"
+author: "Group 3: Rose Determan, Yongrong Chai, Wuji Shan, Tong Sun"
+date: "11/3/2021"
 output:
   revealjs::revealjs_presentation:
     theme: solarized
