--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -20,7 +20,7 @@ source("figure_functions.R")
 
 # Possible Questions:  
 1.How does the strawberry yield vary between states and years?  
-2.Is there any relationship between Level of Bee Toxicity and Carcinogen Level？   
+2.Is there any relationship between Level of Bee Toxicity and Carcinogen Level?
 
 # Proportions for each state
 ```{r, include = TRUE}
