--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -7,9 +7,6 @@ output:
     theme: solarized
     highlight: pygments
 ---
-<style type="text/css">
-p { text-align: left; }
-</style>
 
 ```{r setup,echo=FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set( include=FALSE, echo=FALSE, message=FALSE, warning=FALSE)
@@ -23,7 +20,7 @@ source("figure_functions.R")
 2.Is there any relationship between Level of Bee Toxicity and Carcinogen Level?
 
 # Proportions for each state
-```{r, include = TRUE}
+```{r, include = TRUE, fig.align='center'}
 state_fig()
 ```
 
@@ -53,7 +50,7 @@ carc_apps()
 # Comparison of Toxicities and Application
 
 
-```{r,include = TRUE,fig.width = 11.2,fig.height = 6}
+```{r,include = TRUE}
 group_bars()
 ```
 
