--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -16,7 +16,8 @@ source("figure_functions.R")
 ```
 
 # Possible Questions:  
-1.How does the strawberry yield vary between states and years?  
+1.Comparison of strawberry yields between states.  
+2.How does the pesticide application vary between states and years
 2.Is there any relationship between Level of Bee Toxicity and Carcinogen Level?
 
 # Proportions for each state
