--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -17,7 +17,7 @@ source("figure_functions.R")
 
 # Possible Questions:  
 1.Comparison of strawberry yields between states.  
-2.How does the pesticide application vary between states and years
+2.How does the pesticide application vary between states and years？  
 3.Is there any relationship between Level of Bee Toxicity and Carcinogen Level?
 
 # Proportions for each state
