--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -58,6 +58,11 @@ group_bars()
 ```
 
 # Conclusions:
-* From the bin plot, we can see that the proportions of strawberries numbers have a significant difference between states. California has the largest share and Washington has the smallest.  
+* The proportions of strawberries numbers have a significant difference between states. California has the largest share and Washington has the smallest. (CA > FL > OR > WA > NY)  
 
-* From the bar chart, we can see that all strawberries measured in number with toxicity_bee exist with slight level of carcinogen.There does not exist strawberries measured in number with toxicity_bee in the 2 and 3 level of carcinogen.  
+* All strawberries measured in number with toxicity_bee exist with slight level of carcinogen.There does not exist strawberries measured in number with toxicity_bee in the 2 and 3 level of carcinogen.  
+
+# Future Challenge:
+* Labor Shortage  
+
+* Use of Pesticide
