--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -58,7 +58,7 @@ group_bars()
 ```
 
 # Conclusions:
-* The proportions of strawberries numbers have a significant difference between states. California has the largest share and Washington has the smallest. (CA > FL > OR > WA > NY)  
+* The proportions of strawberries numbers have a significant difference between states. California has the largest share. (CA > FL > OR > WA > NY)  
 
 * All strawberries measured in number with toxicity_bee exist with slight level of carcinogen.There does not exist strawberries measured in number with toxicity_bee in the 2 and 3 level of carcinogen.  
 
